--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'eclipse-wtp'
 apply plugin: 'war'
 apply plugin: 'jetty'
 
+description = "Projeto pré-configurado com Javarch JSF e Hibernate"
 
 configurations.all {
 	// check for updates every build
@@ -20,9 +21,9 @@ dependencies {
 	providedCompile 'javax.servlet:servlet-api:2.5',
 					'javax.servlet:jsp-api:2.0'
 	
-	compile "com.github.javarch:javarch-persistence:0.1-SNAPSHOT",
-	 		"com.github.javarch:javarch-jsf:0.1-SNAPSHOT",
-			"com.github.javarch:javarch-support:0.1-SNAPSHOT",
+	compile "com.github.javarch:javarch-persistence:0.2-SNAPSHOT",
+	 		"com.github.javarch:javarch-jsf:0.2-SNAPSHOT",
+			"com.github.javarch:javarch-support:0.2-SNAPSHOT",
 			"com.h2database:h2:1.3.168",
 			"org.primefaces.themes:bootstrap:1.0.8",
 			"org.seleniumhq.selenium:selenium-java:2.21.0"		
